import numpy as np
import pandas as pd
import json
import uuid


def prob(size=1000, seed = 42):
    np.random.seed(seed)
    universe_all = [
        'LSRG',
         'TRMK',
         'SAREP',
         'UTAR',
         'USBN',
         'IRAO',
         'KOGK',
         'YAKG',
         'MGTSP',
         'MRKU',
         'JNOS',
         'KTSBP',
         'YRSBP',
         'TGKDP',
         'MTLRP',
         'SNGS',
         'SELG',
         'KZOSP',
         'CBOM',
         'KBSB',
         'KRKN',
         'NLMK',
         'VSYDP',
         'RUGR',
         'GAZAP',
         'PMSB',
         'KAZTP',
         'IRKT',
         'UWGN',
         'CHMF',
         'MOEX',
         'SELGP',
         'TATN',
         'UNAC',
         'VJGZ',
         'GAZP',
         'NKNCP',
         'TGKBP',
         'ROSN',
         'VZRZP',
         'WTCMP',
         'MISBP',
         'CHGZ',
         'ELTZ',
         'MRKS',
         'UKUZ',
         'NKSH',
         'IGST',
         'VLHZ',
         'KCHEP',
         'RUAL',
         'MRSB',
         'ROST',
         'TATNP',
         'ALRS',
         'GAZS',
         'DIOD',
         'KUBE',
         'MSNG',
         'TASBP',
         'TRNFP',
         'LNZL',
         'RKKE',
         'NKNC',
         'LPSB',
         'MFON',
         'TTLK',
         'UNKL',
         'KRKOP',
         'OMZZP',
         'SNGSP',
         'ARSA',
         'KUZB',
         'FESH',
         'NNSB',
         'RTGZ',
         'LKOH',
         'PIKK',
         'GCHE',
         'SBERP',
         'NFAZ',
         'SAGOP',
         'KGKCP',
         'RSTIP',
         'IGSTP',
         'BRZL',
         'VGSBP',
         'GMKN',
         'WTCM',
         'MRKP',
         'AMEZ',
         'VZRZ',
         'MSTT',
         'MGTS',
         'TGKA',
         'HALS',
         'MRKC',
         'PMSBP',
         'JNOSP',
         'CNTLP',
         'SBER',
         'KMAZ',
         'MRKV',
         'IRGZ',
         'AFKS',
         'ALNU',
         'MTSS',
         'ROLO',
         'MRKK',
         'FEES',
         'VRSBP',
         'HIMCP',
         'ENRU',
         'CHMK',
         'SARE',
         'BLNG',
         'ABRD',
         'GAZC',
         'POLY',
         'ZILL',
         'AKRN',
         'YRSB',
         'CNTL',
         'DZRDP',
         'TNSE',
         'YKEN',
         'KLSB',
         'ALBK',
         'KTSB',
         'NMTP',
         'LVHK',
         'TORSP',
         'ISKJ',
         'LSNG',
         'KRKNP',
         'AFLT',
         'LNZLP',
         'GAZA',
         'TORS',
         'LSNGP',
         'CHKZ',
         'ASSB',
         'RTSBP',
         'MORI',
         'RUSI',
         'DVEC',
         'VJGZP',
         'STSBP',
         'STSB',
         'NSVZ',
         'MGNZ',
         'RTKM',
         'RASP',
         'MFGS',
         'NKHP',
         'NNSBP',
         'YNDX',
         'AQUA',
         'APTK',
         'MSRS',
         'RGSS',
         'TUZA',
         'QIWI',
         'MOBB',
         'MTLR',
         'PAZA',
         'TRCN',
         'PRMB',
         'KBTK',
         'MISB',
         'KCHE',
         'NVTK',
         'ROSB',
         'VGSB',
         'MFGSP',
         'KRSB',
         'MAGN',
         'KGKC',
         'PHOR',
         'VSMO',
         'URKZ',
         'RTSB',
         'NAUK',
         'RSTI',
         'RUSP',
         'ZVEZ',
         'BISV',
         'TGKB',
         'DZRD',
         'SVAV',
         'MVID',
         'VRSB',
         'KRSBP',
         'OGKB',
         'VSYD',
         'HYDR',
         'UCSS',
         'YKENP',
         'VTBR',
         'SAGO',
         'TGKN',
         'KMEZ',
         'KZOS',
         'TGKD',
         'SIBN',
         'BISVP',
         'TASB',
         'BANEP',
         'RDRB',
         'URKA',
         'MGNT',
         'KAZT',
         'KROT',
         'CHEP',
         'RZSB',
         'MAGE',
         'KROTP',
         'BSPB',
         'PLZL',
         'AVAN',
         'RTKMP',
         'RBCM',
         'LIFE',
         'LNTA',
         'MRKY',
         'BANE',
         'MAGEP',
         'AGRO',
         'MRKZ'
    ]
    sector = {
        'LSRG': 'Строительство',
        'TRMK': 'Черная металлургия',
        'SAREP': 'Энергетика',
        'UTAR': 'Транспорт',
        'USBN': 'Банки',
        'IRAO': 'Энергетика',
        'KOGK': 'Черная металлургия',
        'YAKG': 'Нефть и газ',
        'MGTSP': 'Связь',
        'MRKU': 'Энергетика',
        'JNOS': 'Нефть и газ',
        'KTSBP': 'Энергетика',
        'YRSBP': 'Энергетика',
        'TGKDP': 'Энергетика',
        'MTLRP': 'Черная металлургия',
        'SNGS': 'Нефть и газ',
        'SELG': 'Горное дело',
        'KZOSP': 'Химия',
        'CBOM': 'Банки',
        'KBSB': 'Энергетика',
        'KRKN': 'Химия',
        'NLMK': 'Черная металлургия',
        'VSYDP': 'Машиностроение',
        'RUGR': 'Сельское хозяйство',
        'GAZAP': 'Машиностроение',
        'PMSB': 'Энергетика',
        'KAZTP': 'Химия',
        'IRKT': 'Машиностроение',
        'UWGN': 'Транспорт',
        'CHMF': 'Черная металлургия',
        'MOEX': 'Финансы',
        'SELGP': 'Горное дело',
        'TATN': 'Нефть и газ',
        'UNAC': 'Машиностроение',
        'VJGZ': 'Нефть и газ',
        'GAZP': 'Нефть и газ',
        'NKNCP': 'Химия',
        'TGKBP': 'Энергетика',
        'ROSN': 'Нефть и газ',
        'VZRZP': 'Банки',
        'WTCMP': 'Другие отрасли',
        'MISBP': 'Энергетика',
        'CHGZ': 'Нефть и газ',
        'ELTZ': 'Цветная металлургия',
        'MRKS': 'Энергетика',
        'UKUZ': 'Горное дело',
        'NKSH': 'Другие отрасли',
        'IGST': 'Черная металлургия',
        'VLHZ': 'Химия',
        'KCHEP': 'Энергетика',
        'RUAL': 'Цветная металлургия',
        'MRSB': 'Энергетика',
        'ROST': 'Продукты',
        'TATNP': 'Нефть и газ',
        'ALRS': 'Горное дело',
        'GAZS': 'Нефть и газ',
        'DIOD': 'Медицина',
        'KUBE': 'Энергетика',
        'MSNG': 'Энергетика',
        'TASBP': 'Энергетика',
        'TRNFP': 'Нефть и газ',
        'LNZL': 'Горное дело',
        'RKKE': 'Другие отрасли',
        'NKNC': 'Химия',
        'LPSB': 'Энергетика',
        'MFON': 'Связь',
        'TTLK': 'Связь',
        'UNKL': 'Цветная металлургия',
        'KRKOP': 'Машиностроение',
        'OMZZP': 'Машиностроение',
        'SNGSP': 'Нефть и газ',
        'ARSA': 'Финансы',
        'KUZB': 'Банки',
        'FESH': 'Транспорт',
        'NNSB': 'Энергетика',
        'RTGZ': 'Энергетика',
        'LKOH': 'Нефть и газ',
        'PIKK': 'Строительство',
        'GCHE': 'Продукты',
        'SBERP': 'Банки',
        'NFAZ': 'Машиностроение',
        'SAGOP': 'Энергетика',
        'KGKCP': 'Энергетика',
        'RSTIP': 'Энергетика',
        'IGSTP': 'Черная металлургия',
        'BRZL': 'Горное дело',
        'VGSBP': 'Энергетика',
        'GMKN': 'Цветная металлургия',
        'WTCM': 'Другие отрасли',
        'MRKP': 'Энергетика',
        'AMEZ': 'Черная металлургия',
        'VZRZ': 'Банки',
        'MSTT': 'Строительство',
        'MGTS': 'Связь',
        'TGKA': 'Энергетика',
        'HALS': 'Строительство',
        'MRKC': 'Энергетика',
        'PMSBP': 'Энергетика',
        'JNOSP': 'Нефть и газ',
        'CNTLP': 'Связь',
        'SBER': 'Банки',
        'KMAZ': 'Машиностроение',
        'MRKV': 'Энергетика',
        'IRGZ': 'Энергетика',
        'AFKS': 'Связь',
        'ALNU': 'Горное дело',
        'MTSS': 'Связь',
        'ROLO': 'Черная металлургия',
        'MRKK': 'Энергетика',
        'FEES': 'Энергетика',
        'VRSBP': 'Энергетика',
        'HIMCP': 'Химия',
        'ENRU': 'Энергетика',
        'CHMK': 'Черная металлургия',
        'SARE': 'Энергетика',
        'BLNG': 'Черная металлургия',
        'ABRD': 'Продукты',
        'GAZC': 'Финансы',
        'POLY': 'Горное дело',
        'ZILL': 'Машиностроение',
        'AKRN': 'Химия',
        'YRSB': 'Энергетика',
        'CNTL': 'Связь',
        'DZRDP': 'Другие отрасли',
        'TNSE': 'Энергетика',
        'YKEN': 'Энергетика',
        'KLSB': 'Энергетика',
        'ALBK': 'Банки',
        'KTSB': 'Энергетика',
        'NMTP': 'Транспорт',
        'LVHK': 'Другие отрасли',
        'TORSP': 'Энергетика',
        'ISKJ': 'Медицина',
        'LSNG': 'Энергетика',
        'KRKNP': 'Химия',
        'AFLT': 'Транспорт',
        'LNZLP': 'Горное дело',
        'GAZA': 'Машиностроение',
        'TORS': 'Энергетика',
        'LSNGP': 'Энергетика',
        'CHKZ': 'Машиностроение',
        'ASSB': 'Энергетика',
        'RTSBP': 'Энергетика',
        'MORI': 'Связь',
        'RUSI': 'Финансы',
        'DVEC': 'Энергетика',
        'VJGZP': 'Нефть и газ',
        'STSBP': 'Энергетика',
        'STSB': 'Энергетика',
        'NSVZ': 'Связь',
        'MGNZ': 'Цветная металлургия',
        'RTKM': 'Связь',
        'RASP': 'Горное дело',
        'MFGS': 'Нефть и газ',
        'NKHP': 'Сельское хозяйство',
        'NNSBP': 'Энергетика',
        'YNDX': 'Технологии',
        'AQUA': 'Продукты',
        'APTK': 'Торговля',
        'MSRS': 'Энергетика',
        'RGSS': 'Финансы',
        'TUZA': 'Машиностроение',
        'QIWI': 'Другие отрасли',
        'MOBB': 'Банки',
        'MTLR': 'Черная металлургия',
        'PAZA': 'Машиностроение',
        'TRCN': 'Транспорт',
        'PRMB': 'Банки',
        'KBTK': 'Горное дело',
        'MISB': 'Энергетика',
        'KCHE': 'Энергетика',
        'NVTK': 'Нефть и газ',
        'ROSB': 'Банки',
        'VGSB': 'Энергетика',
        'MFGSP': 'Нефть и газ',
        'KRSB': 'Энергетика',
        'MAGN': 'Черная металлургия',
        'KGKC': 'Энергетика',
        'PHOR': 'Химия',
        'VSMO': 'Цветная металлургия',
        'URKZ': 'Черная металлургия',
        'RTSB': 'Энергетика',
        'NAUK': 'Машиностроение',
        'RSTI': 'Энергетика',
        'RUSP': 'Цветная металлургия',
        'ZVEZ': 'Машиностроение',
        'BISV': 'Связь',
        'TGKB': 'Энергетика',
        'DZRD': 'Другие отрасли',
        'SVAV': 'Машиностроение',
        'MVID': 'Торговля',
        'VRSB': 'Энергетика',
        'KRSBP': 'Энергетика',
        'OGKB': 'Энергетика',
        'VSYD': 'Машиностроение',
        'HYDR': 'Энергетика',
        'UCSS': 'Финансы',
        'YKENP': 'Энергетика',
        'VTBR': 'Банки',
        'SAGO': 'Энергетика',
        'TGKN': 'Энергетика',
        'KMEZ': 'Машиностроение',
        'KZOS': 'Химия',
        'TGKD': 'Энергетика',
        'SIBN': 'Нефть и газ',
        'BISVP': 'Связь',
        'TASB': 'Энергетика',
        'BANEP': 'Нефть и газ',
        'RDRB': 'Банки',
        'URKA': 'Химия',
        'MGNT': 'Торговля',
        'KAZT': 'Химия',
        'KROT': 'Продукты',
        'CHEP': 'Черная металлургия',
        'RZSB': 'Энергетика',
        'MAGE': 'Энергетика',
        'KROTP': 'Продукты',
        'BSPB': 'Банки',
        'PLZL': 'Цветная металлургия',
        'AVAN': 'Банки',
        'RTKMP': 'Связь',
        'RBCM': 'Медиа',
        'LIFE': 'Медицина',
        'LNTA': 'Продукты',
        'MRKY': 'Энергетика',
        'BANE': 'Нефть и газ',
        'MAGEP': 'Энергетика',
        'AGRO': 'Сельское хозяйство',
        'MRKZ': 'Энергетика'
    }
    a_sector_all = pd.get_dummies(pd.Series(sector))
    for i in range(size):
        prob_type = np.random.choice(['max_return', 'min_risk'], replace=False)
        if prob_type == 'max_return':
            portfolio_risk_max = np.random.uniform(low=0.003, high=0.02)
            portfolio_return_min = None
        else:
            portfolio_risk_max = None
            portfolio_return_min = np.random.uniform(low=0.0001, high=0.002)
        universe = np.random.choice(universe_all, replace=False, size=np.random.randint(low=100, high=200)).tolist()
        a_sector = a_sector_all.loc[universe]
        data = {
            'rqld': str(uuid.uuid1()),
            'model_id': 'RUS',
            'currency': 'RUB',
            'universe': universe,
            'parameters': {
                'prob_type': prob_type,
                'T_0': '2010-01-01',
                'T_1': '2021-04-16',
                'portfolio_risk_max': portfolio_risk_max,
                'portfolio_return_min': portfolio_return_min,
                'portfolio_weight_max': np.random.uniform(low=0.05, high=0.3),
                'portfolio_weight_min': 0,
                't': np.random.randint(low=100, high=300),
                'capital': 100000.0,
                'weight_min': np.random.uniform(low=0.9, high=0.99),  
                'portfolio_weight_sector_max' : 0.5,
                'sector_mapping': a_sector.values.tolist()
            },
            'time_limit': 1800,
            'iteration_limit': None,
            'node_limit': None,
            'user_obj_limit': None
        }
        yield json.dumps(data)
        

