import numpy as np
import pandas as pd
import json
import uuid


def prob(size=1000, seed = 42):
    np.random.seed(seed)
    universe_all = [
        'LSRG',
         'TRMK',
         'SAREP',
         'UTAR',
         'USBN',
         'IRAO',
         'KOGK',
         'YAKG',
         'MGTSP',
         'MRKU',
         'JNOS',
         'KTSBP',
         'YRSBP',
         'TGKDP',
         'MTLRP',
         'SNGS',
         'SELG',
         'KZOSP',
         'CBOM',
         'KBSB',
         'KRKN',
         'NLMK',
         'VSYDP',
         'RUGR',
         'GAZAP',
         'PMSB',
         'KAZTP',
         'IRKT',
         'UWGN',
         'CHMF',
         'MOEX',
         'SELGP',
         'TATN',
         'UNAC',
         'VJGZ',
         'GAZP',
         'NKNCP',
         'TGKBP',
         'ROSN',
         'VZRZP',
         'WTCMP',
         'MISBP',
         'CHGZ',
         'ELTZ',
         'MRKS',
         'UKUZ',
         'NKSH',
         'IGST',
         'VLHZ',
         'KCHEP',
         'RUAL',
         'MRSB',
         'ROST',
         'TATNP',
         'ALRS',
         'GAZS',
         'DIOD',
         'KUBE',
         'MSNG',
         'TASBP',
         'TRNFP',
         'LNZL',
         'RKKE',
         'NKNC',
         'LPSB',
         'MFON',
         'TTLK',
         'UNKL',
         'KRKOP',
         'OMZZP',
         'SNGSP',
         'ARSA',
         'KUZB',
         'FESH',
         'NNSB',
         'RTGZ',
         'LKOH',
         'PIKK',
         'GCHE',
         'SBERP',
         'NFAZ',
         'SAGOP',
         'KGKCP',
         'RSTIP',
         'IGSTP',
         'BRZL',
         'VGSBP',
         'GMKN',
         'WTCM',
         'MRKP',
         'AMEZ',
         'VZRZ',
         'MSTT',
         'MGTS',
         'TGKA',
         'HALS',
         'MRKC',
         'PMSBP',
         'JNOSP',
         'CNTLP',
         'SBER',
         'KMAZ',
         'MRKV',
         'IRGZ',
         'AFKS',
         'ALNU',
         'MTSS',
         'ROLO',
         'MRKK',
         'FEES',
         'VRSBP',
         'HIMCP',
         'ENRU',
         'CHMK',
         'SARE',
         'BLNG',
         'ABRD',
         'GAZC',
         'POLY',
         'ZILL',
         'AKRN',
         'YRSB',
         'CNTL',
         'DZRDP',
         'TNSE',
         'YKEN',
         'KLSB',
         'ALBK',
         'KTSB',
         'NMTP',
         'LVHK',
         'TORSP',
         'ISKJ',
         'LSNG',
         'KRKNP',
         'AFLT',
         'LNZLP',
         'GAZA',
         'TORS',
         'LSNGP',
         'CHKZ',
         'ASSB',
         'RTSBP',
         'MORI',
         'RUSI',
         'DVEC',
         'VJGZP',
         'STSBP',
         'STSB',
         'NSVZ',
         'MGNZ',
         'RTKM',
         'RASP',
         'MFGS',
         'NKHP',
         'NNSBP',
         'YNDX',
         'AQUA',
         'APTK',
         'MSRS',
         'RGSS',
         'TUZA',
         'QIWI',
         'MOBB',
         'MTLR',
         'PAZA',
         'TRCN',
         'PRMB',
         'KBTK',
         'MISB',
         'KCHE',
         'NVTK',
         'ROSB',
         'VGSB',
         'MFGSP',
         'KRSB',
         'MAGN',
         'KGKC',
         'PHOR',
         'VSMO',
         'URKZ',
         'RTSB',
         'NAUK',
         'RSTI',
         'RUSP',
         'ZVEZ',
         'BISV',
         'TGKB',
         'DZRD',
         'SVAV',
         'MVID',
         'VRSB',
         'KRSBP',
         'OGKB',
         'VSYD',
         'HYDR',
         'UCSS',
         'YKENP',
         'VTBR',
         'SAGO',
         'TGKN',
         'KMEZ',
         'KZOS',
         'TGKD',
         'SIBN',
         'BISVP',
         'TASB',
         'BANEP',
         'RDRB',
         'URKA',
         'MGNT',
         'KAZT',
         'KROT',
         'CHEP',
         'RZSB',
         'MAGE',
         'KROTP',
         'BSPB',
         'PLZL',
         'AVAN',
         'RTKMP',
         'RBCM',
         'LIFE',
         'LNTA',
         'MRKY',
         'BANE',
         'MAGEP',
         'AGRO',
         'MRKZ'
    ]
    for i in range(size):
        prob_type = np.random.choice(['max_return', 'min_risk'], replace=False)
        if prob_type == 'max_return':
            portfolio_risk_max = np.random.uniform(low=0.003, high=0.02)
            portfolio_return_min = None
        else:
            portfolio_risk_max = None
            portfolio_return_min = np.random.uniform(low=0.0001, high=0.002)
        universe = np.random.choice(universe_all, replace=False, size=np.random.randint(low=100, high=200)).tolist()
        data = {
            'rqId': str(uuid.uuid1()),
            'model': 'mad_min' if prob_type == "min_risk" else "mad_max",
            'currency': 'RUB',
            'universe': universe,
            'parameters': {
                'prob_type': prob_type,
                'T_0': '2010-01-01',
                'T_1': '2021-04-16',
                'portfolio_risk_max': portfolio_risk_max,
                'portfolio_return_min': portfolio_return_min,
                'portfolio_weight_max': np.random.uniform(low=0.05, high=0.3),
                'portfolio_weight_min': 0,
                't': np.random.randint(low=100, high=300),
                'capital': 100000.0,
                'weight_min': np.random.uniform(low=0.9, high=0.99)
            },
            'time_limit': 1800,
            'iteration_limit': None,
            'node_limit': None,
            'user_obj_limit': None
        }
        yield json.dumps(data)
        

